--- a/UI/src/app/user-dashboard/user-dashboard.component.html
+++ b/UI/src/app/user-dashboard/user-dashboard.component.html
@@ -7,24 +7,25 @@
       </li>
     </ul>
     <ul class="navbar-nav">
-      <a class="nav-link"  role="button" style="cursor: pointer;" aria-haspopup="true" aria-expanded="false" (click)="getAllAds()">
-          All Ads
-        </a>
-      <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown"  role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Category
-          </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <!--<a *ngFor="let cat of categoryList" class="dropdown-item" [routerLink]="['advt', cat]" >{{cat}}</a>-->
-            <a *ngFor="let cat of categoryList" class="dropdown-item" (click)="filter(cat)" style="cursor: pointer;">{{cat}}</a>
-          </div>
-        </li>
-
-
-    <li class="nav-item">
-      <a class="nav-link" (click)="logout()" style="cursor: pointer;"><em class="fas fa-power-off fa-2x"></em></a>
-    </li>
-  </ul>
+        <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Category
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="#">Electronics</a>
+              <a class="dropdown-item" href="#">Medical</a>
+              <a class="dropdown-item" href="#">Clothing</a>
+              <a class="dropdown-item" href="#">Furniture</a>
+              <a class="dropdown-item" href="#">Video Games</a>
+              <a class="dropdown-item" href="#">Computers</a>
+              <a class="dropdown-item" href="#">Mobile Phones</a>
+              <a class="dropdown-item" href="#">Home Appliances</a>
+            </div>
+          </li>
+      <li class="nav-item">
+        <a class="nav-link" (click)="logout()" style="cursor: pointer;"><i class="fas fa-power-off fa-2x"></i></a>
+      </li>
+    </ul>
   </nav>
 </div>
 
@@ -66,29 +67,15 @@
           <hr>
           <div class="card-text">
             <span class="h5">100&nbsp;<em class="fas fa-coins text-warning"></em> = &nbsp;<em
-                class="fas fa-rupee-sign">&nbsp;50</em></span>
+                class="fas fa-dollar-sign">&nbsp;1</em></span>
           </div>
         </div>
-      </div>
-
-      <div class="card shadow text-center mt-4">
-      <button
-          type="button"
-          class="btn btn-warning"
-          data-toggle="modal"
-          data-target="#exampleWallet"
-
-
-          (click)="WalletCheck()"
-        >
-         <h5><strong class="text-white">WALLET</strong></h5>
-        </button>
       </div>
     </div>
 
 
 
-    <div class="offset-3 col mt-5">
+    <div class="offset-3 col mt-4">
       <div *ngIf="advts">
         <div *ngFor="let advt of advts" class="col-md-5 d-inline-block">
           <div class="card my-3 mr-5 pr-5 bg-white shadow" style="max-width: 540px; cursor: pointer;" (click)="creditCount(advt.id)" data-toggle="modal" data-target="#exampleModalCenter">
@@ -101,11 +88,7 @@
                     <p class="card-title"><strong>CATEGORY:</strong> {{advt?.categoryadd}}</p>
                     <p class="card-text"><strong>BRAND:</strong> {{advt?.brand}}</p>
                     <p class="card-text"><strong>PRODUCT:</strong> {{advt?.product}}</p>
-                    <p class="card-text">
-                      <strong>DESCRIPTION:</strong>
-                      {{advt?.description |  slice:0:15}}
-                      <span *ngIf="advt?.description.length > 15"><a (click)="creditCount(advt.id)">..Read More</a></span>
-                    </p>
+                    <p class="card-text"><strong>DESCRIPTION:</strong> {{advt?.description}}</p>
                     <p class="card-text"><small class="text-muted">Date of Publish: {{advt?.dop}}</small></p>
                   </div>
                 </div>
@@ -124,7 +107,7 @@
       <div class="modal-content">
         <div class="modal-header">
           <h5 class="modal-title" id="exampleModalCenterTitle">Advertisement Description</h5>
-          <button type="button" data-toggle="modal" data-target=".bd-example-modal-sm" class="btn btn-danger" data-dismiss="modal" aria-label="Close">
+          <button type="button" data-toggle="modal" data-target=".bd-example-modal-sm" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
         </div>
@@ -133,7 +116,7 @@
             <div class="col-5">
                 <img src="../../assets/img/logo.png" alt="product image" height="500" width="500">
             </div>
-            <div class="offset-2 col-5 mt-5 pt-4" id="wrap">
+            <div class="offset-2 col-5">
               <p><strong>CATEGORY:</strong> {{singleAd?.categoryadd}}</p>
               <p><strong>BRAND:</strong> {{singleAd?.brand}}</p>
               <p><strong>PRODUCT:</strong> {{singleAd?.product}}</p>
@@ -147,7 +130,7 @@
   </div>
 
 
-  <!-- <div *ngIf="this.clicklimit >= 1 && this.adclicklimit==0  ">
+  <div *ngIf="clicklimit >= 1 ; else exceed">
   <div class="modal fade bd-example-modal-sm" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
       <div class="modal-dialog modal-sm">
         <div class="modal-content">
@@ -161,10 +144,9 @@
         </div>
       </div>
     </div>
-</div> -->
-  <!--<ng-template #exceed>-->
-    <!-- <div *ngIf="this.clicklimit==0 &&
-    this.adclicklimit==0">
+</div>
+  <ng-template #exceed>
+    <div>
       <div class="modal fade bd-example-modal-sm" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true" id="limitModal">
         <div class="modal-dialog modal-sm">
           <div class="modal-content">
@@ -179,25 +161,8 @@
         </div>
       </div>
 
-    </div> -->
-
-    <div>
-      <div class="modal fade bd-example-modal-sm" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
-          <div class="modal-dialog modal-sm">
-            <div class="modal-content">
-              <div class="modal-header">
-                <div class="modal-title">
-                </div>
-                <div class="modal-body bg-light">
-                    <h4>{{messageStatus}}<i class="far fa-smile-beam text-warning"></i></h4>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
     </div>
-
- <!-- </ng-template>-->
+  </ng-template>
 <!-- Modal for Reedem Credits -->
    <div
   class="modal fade"
@@ -227,34 +192,4 @@
       </div>
     </div>
   </div>
-   </div>
-
-  <div
-  class="modal fade"
-  id="exampleWallet"
-  tabindex="-1"
-  role="dialog"
-  aria-labelledby="exampleModalCenterTitle"
-  aria-hidden="true"
->
-  <div class="modal-dialog modal-dialog-centered">
-    <div class="modal-content text-center" id="mbd">
-      <div class="modal-header text-center text-dark">
-        <h3><strong><em>WALLET BALANCE</em></strong></h3>
-      </div>
-      <div class="modal-body text-success">
-        <div class="form-group">
-          <div><h4><strong><i>Your Wallet Balance is&nbsp;:&nbsp;
-            <em class="fas fa-rupee-sign"></em> {{walletBalance}}</i></strong></h4>
-          </div>
-          </div>
-        </div>
-          <div class="modal-footer">
-              <button type="button" class="btn btn-primary" data-dismiss="modal">
-                Close
-              </button>
-            </div>
-    </div>
-  </div>
-
 </div>
